[gd_scene load_steps=4 format=3 uid="uid://b0pwgemgq86bc"]

[ext_resource type="Script" uid="uid://cxyxbje4y883d" path="res://weapon_unlock_screen.gd" id="1_tmbdm"]
[ext_resource type="FontFile" uid="uid://q6c0g5avw7b" path="res://Tektur/Tektur-VariableFont_wdth,wght.ttf" id="2_5w55y"]
[ext_resource type="Texture2D" uid="uid://mtpli3e0i76s" path="res://2D Space Parallax Backgrounds/layers/complete.png" id="2_n816y"]

[node name="WeaponUnlockScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tmbdm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_n816y")
expand_mode = 2

[node name="UIBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 69.0
offset_right = 427.0
offset_bottom = 206.0
alignment = 1

[node name="wrapperTitle" type="Node2D" parent="UIBox"]
position = Vector2(24, -9)

[node name="TitleLabel" type="Label" parent="UIBox/wrapperTitle"]
offset_left = -5.0
offset_top = -17.0
offset_right = 187.0
offset_bottom = 4.0
theme_override_fonts/font = ExtResource("2_5w55y")
text = "Weapon Unlocked!"

[node name="WeaponIcon" type="TextureRect" parent="UIBox"]
layout_mode = 2
stretch_mode = 5

[node name="wrapperWeapon" type="Node2D" parent="UIBox"]
position = Vector2(-5, 8)

[node name="weaponNameLabel" type="Label" parent="UIBox/wrapperWeapon"]
offset_top = 16.0
offset_right = 192.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("2_5w55y")
text = "Weapon 3 - laser cannon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="wrapperContinue" type="Node2D" parent="UIBox"]
position = Vector2(-3, 173)

[node name="ContinueButton" type="Button" parent="UIBox/wrapperContinue"]
offset_top = 41.0
offset_right = 192.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("2_5w55y")
text = "Press Start to Continue
"

[node name="nextLevelLabel" type="Label" parent="UIBox"]
layout_mode = 2

[node name="equipInfoLabel" type="Label" parent="UIBox"]
layout_mode = 2
